--- a/docker-gha-runner/Dockerfile
+++ b/docker-gha-runner/Dockerfile
@@ -1,4 +1,5 @@
-FROM ghcr.io/actions/actions-runner:2.328.0
+ARG BASE_IMAGE
+FROM ${BASE_IMAGE:-ghcr.io/actions/actions-runner:2.328.0}
 
 USER root
 COPY entrypoint.sh /entrypoint.sh
