--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -31,6 +31,7 @@ jobs:
       matrix:
         image:
           - "docker-gha-runner"
+          - "docker-gha-dispatcher"
 
     steps:
       - name: "Checkout repository."
