feat(gha): Dispatcher fixes
Signed-off-by: Peter Mikus <pmikus@cisco.com>

--- a/.github/workflows/nomad-run.yml
+++ b/.github/workflows/nomad-run.yml
@@ -25,6 +25,8 @@ jobs:
     runs-on:
       - self-hosted
       - nomad
+      - arch:x86_64
+      - class:builder
 
     strategy:
       max-parallel: 1
