--- a/.github/workflows/nomad-run.yml
+++ b/.github/workflows/nomad-run.yml
@@ -25,8 +25,9 @@ jobs:
     runs-on:
       - self-hosted
       - nomad
-      - arch:x86_64
-      - class:builder
+      - acme_arch_amd64
+      - acme_class_builder
+      - acme_namespace_prod
 
     strategy:
       max-parallel: 1
